--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                <!-- ================= Fourth WebPage Section================= -->
                 <div class="specificServices">
                               <div class="servicesImg">
-                                             <img src="./images/PhotoEditing.png" alt="Photo Editing">
-                                             <img src="./images/PhotoShooting.png" alt="Photo Shooting">
-                                             <img src="./images/VideoEditing.png" alt="Video Editing">
+                                             <img src="./images/PhotoEditing.png" alt="Photo Editing" class="photoEditing">
+                                             <img src="./images/PhotoShooting.png" alt="Photo Shooting" class="photoShooting">
+                                             <img src="./images/VideoEditing.png" alt="Video Editing" class="videoEditing">
                               </div>
                 </div>
 
