--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
                <title>Lens Legacy</title>
                <link rel="stylesheet" href="Style/style.css">
                <link rel="preconnect" href="https://fonts.googleapis.com">
+               <link rel="shortcut icon" href="./images/WebSiteLogo.png" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
 </head>
